syntax = "proto3";
package comdex.auctionsV2.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/comdex-official/comdex/x/auctionsV2/types";

message Bid{
  uint64 bidding_id = 1 [
    (gogoproto.moretags) = "yaml:\"bidding_id\""
  ];

  uint64 auction_id = 2 [
    (gogoproto.moretags) = "yaml:\"auction_id\""
  ];
  cosmos.base.v1beta1.Coin collateral_token_amount = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"outflow_token_amount\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];

  cosmos.base.v1beta1.Coin debt_token_amount = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"inflow_token_amount\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];

  string bidder_address = 5 [
    (gogoproto.moretags) = "yaml:\"bidder\""
  ];

  google.protobuf.Timestamp bidding_timestamp = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"bidding_timestamp\""
  ];

  uint64 app_id = 7 [
    (gogoproto.moretags) = "yaml:\"app_id\""
  ];
  string bid_type = 8 [
    (gogoproto.moretags) = "yaml:\"bid_type\""
  ];

}

message LimitOrderBid{
  uint64 limit_order_bidding_id = 1 [
    (gogoproto.moretags) = "yaml:\"limit_order_bidding_id\""
  ];

  string bidder_address = 2 [
    (gogoproto.moretags) = "yaml:\"bidder\""
  ];

  uint64 collateral_token_id = 3 [

    (gogoproto.moretags) = "yaml:\"collateral_token_id\""
  ];
  string premium_discount = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"premium_discount\""
  ];
  uint64 debt_token_id = 5 [

    (gogoproto.moretags) = "yaml:\"debt_token_id\""
  ];


  cosmos.base.v1beta1.Coin debt_token = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"debt_token\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];

  repeated uint64 bidding_id = 7 [
    (gogoproto.moretags) = "yaml:\"bidding_id\""
  ];

}


// params will include for park your asset for dutch bid
// % slots above which we have to increase or decrease (step)
// withdrawal fee for taking out bid
// Closing fee for taking out collateral parked

message AuctionParams{
  uint64 auction_duration_seconds = 1 [
    (gogoproto.moretags) = "yaml:\"auction_duration_seconds\""
  ];
  string step = 2 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"step\""
  ];
  string withdrawal_fee = 3 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"withdrawal_fee\""
  ];
  string closing_fee = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"closing_fee\""
  ];
  uint64 min_usd_value_left = 5[
    (gogoproto.moretags) = "yaml:\"min_usd_value_left\""
  ];
  string bid_factor = 6 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"bid_factor\""
  ];
  //For external apps
  string liquidation_penalty = 7 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"liquidation_penalty\""
  ];

  string auction_bonus = 8 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"auction_bonus\""
  ];

}

message LimitOrderBidsForUser{
  string bidder_address = 1 [
    (gogoproto.moretags) = "yaml:\"bidder\""
  ];
  repeated LimitOrderUserKey limit_order_bid_key = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"limit_order_bid_key\""
  ];
}

message LimitOrderUserKey{
  uint64 debt_token_id = 1 [

    (gogoproto.moretags) = "yaml:\"debt_token_id\""];

  uint64 collateral_token_id = 2 [

    (gogoproto.moretags) = "yaml:\"collateral_token_id\""
  ];
  string premium_discount = 3 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"premium_discount\""
  ];
  uint64 limit_order_bidding_id = 4 [
    (gogoproto.moretags) = "yaml:\"limit_order_bidding_id\""
  ];
}

message AuctionFeesCollectionFromLimitBidTx{
  uint64 asset_id = 1 [
    (gogoproto.moretags) = "yaml:\"asset_id\""];
  string amount = 2 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"amount\""
  ];
}
// Bidding Structs 
//1. Market Bid
//2. ACBI LIMIT ORDER BIDS


//Limit Order Bids
