syntax = "proto3";
package petri.lend.v1beta1;


import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "petri/lend/v1beta1/lend.proto";
import "petri/lend/v1beta1/params.proto";

option go_package = "github.com/petrichormoney/petri/x/lend/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryLendsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryLendsResponse {
  repeated LendAsset lends = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"lends\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryLendRequest {
  uint64 id = 1;
}

message QueryLendResponse {
  LendAsset lend = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"lend\""];
}

message QueryAllLendByOwnerRequest {
  string owner = 1 [(gogoproto.moretags) = "yaml:\"owner\""];
  cosmos.base.query.v1beta1.PageRequest pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryAllLendByOwnerResponse {
  repeated LendAsset lends = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"lend_ids\""];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryAllLendByOwnerAndPoolRequest {
  string owner = 1 [(gogoproto.moretags) = "yaml:\"owner\""];
  uint64 pool_id = 2 [(gogoproto.moretags) = "yaml:\"pool_id\""];
  cosmos.base.query.v1beta1.PageRequest pagination = 3
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryAllLendByOwnerAndPoolResponse {
  repeated LendAsset lends = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"lends\""];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryPairsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryPairsResponse {
  repeated Extended_Pair extendedPairs = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"extended_pairs\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryPairRequest {
  uint64 id = 1;
}

message QueryPairResponse {
  Extended_Pair ExtendedPair = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"extended_pair\""];
}

message QueryAssetRatesParamsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryAssetRatesParamsResponse {
  repeated AssetRatesParams AssetRatesParams = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"asset_rates_params\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryAssetRatesParamRequest {
  uint64 id = 1;
}

message QueryAssetRatesParamResponse {
  AssetRatesParams AssetRatesparams = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"asset_rates_params\""];
}

message QueryPoolsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryPoolsResponse {
  repeated Pool pools = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"pools\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryPoolRequest {
  uint64 id = 1;
}

message QueryPoolResponse {
  Pool pool = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"pool\""];
}

message QueryAssetToPairMappingsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryAssetToPairMappingsResponse {
  repeated AssetToPairMapping assetToPairMappings = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"asset_to_pair_mappings\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryAssetToPairMappingRequest {
  uint64 asset_id = 1 [(gogoproto.moretags) = "yaml:\"asset_id\""];
  uint64 pool_id = 2 [(gogoproto.moretags) = "yaml:\"pool_id\""];
}

message QueryAssetToPairMappingResponse {
  AssetToPairMapping AssetToPairMapping = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"asset_to_pair_mapping\""];
}

message QueryBorrowsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryBorrowsResponse {
  repeated BorrowAsset borrows = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"borrows\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryBorrowRequest {
  uint64 id = 1;
}

message QueryBorrowResponse {
  BorrowAsset borrow = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"borrow\""];
}

message QueryAllBorrowByOwnerRequest {
  string owner = 1 [(gogoproto.moretags) = "yaml:\"owner\""];
  cosmos.base.query.v1beta1.PageRequest pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryAllBorrowByOwnerResponse {
  repeated BorrowAsset borrows = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"borrows\""];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryAllBorrowByOwnerAndPoolRequest {
  string owner = 1 [(gogoproto.moretags) = "yaml:\"owner\""];
  uint64 pool_id = 2 [(gogoproto.moretags) = "yaml:\"pool_id\""];
  cosmos.base.query.v1beta1.PageRequest pagination = 3
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryAllBorrowByOwnerAndPoolResponse {
  repeated BorrowAsset borrows = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"borrows\""];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryPoolAssetLBMappingRequest {
  uint64 asset_id = 1 [(gogoproto.moretags) = "yaml:\"asset_id\""];
  uint64 pool_id = 2 [(gogoproto.moretags) = "yaml:\"pool_id\""];
}

message QueryPoolAssetLBMappingResponse {
  PoolAssetLBMapping PoolAssetLBMapping = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"pool_asset_lb_mapping\""];
}

// message QueryModuleBalanceRequest {
//   uint64 pool_id = 1 [(gogoproto.moretags) = "yaml:\"pool_id\""];
// }

// message QueryModuleBalanceResponse {
//   ModuleBalance ModuleBalance = 1 [
//     (gogoproto.nullable) = false,
//     (gogoproto.moretags) = "yaml:\"module_balance\""];
// }

// message QueryDepositStatsRequest {}

// message QueryDepositStatsResponse {
//   DepositStats DepositStats = 1 [
//     (gogoproto.nullable) = false,
//     (gogoproto.moretags) = "yaml:\"deposit_stats\""];
// }

// message QueryUserDepositStatsRequest {}

// message QueryUserDepositStatsResponse {
//   DepositStats UserDepositStats = 1 [
//     (gogoproto.nullable) = false,
//     (gogoproto.moretags) = "yaml:\"user_deposit_stats\""];
// }

// message QueryReserveDepositStatsRequest {}

// message QueryReserveDepositStatsResponse {
//   DepositStats ReserveDepositStats = 1 [
//     (gogoproto.nullable) = false,
//     (gogoproto.moretags) = "yaml:\"reserve_deposit_stats\""];
// }

message QueryReserveBuybackAssetDataRequest {
  uint64 asset_id = 1;
}

message QueryReserveBuybackAssetDataResponse {
  ReserveBuybackAssetData ReserveBuybackAssetData = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"reserve_buyback_asset_data\""];
}

// message QueryBorrowStatsRequest {}

// message QueryBorrowStatsResponse {
//   DepositStats BorrowStats = 1 [
//     (gogoproto.nullable) = false,
//     (gogoproto.moretags) = "yaml:\"borrow_stats\""];
// }

message QueryAuctionParamRequest {
  uint64 app_id = 1;
}

message QueryAuctionParamResponse {
  AuctionParams auctionParams = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"auction_params\""];
}

message QueryModuleBalanceRequest {
  uint64 pool_id = 1 [(gogoproto.moretags) = "yaml:\"pool_id\""];
}

message QueryModuleBalanceResponse {
  ModuleBalance ModuleBalance = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"module_balance\""];
}

service Query {
  rpc QueryLends(QueryLendsRequest) returns (QueryLendsResponse) {
    option (google.api.http).get = "/petri/lend/v1beta1/lends";
  }
  rpc QueryLend(QueryLendRequest) returns (QueryLendResponse) {
    option (google.api.http).get = "/petri/lend/v1beta1/lends/{id}";
  }

  rpc QueryAllLendByOwner(QueryAllLendByOwnerRequest) returns (QueryAllLendByOwnerResponse) {
    option (google.api.http).get = "/petri/lend/v1beta1/lends_by_owner/{owner}";
  };

  rpc QueryAllLendByOwnerAndPool(QueryAllLendByOwnerAndPoolRequest) returns (QueryAllLendByOwnerAndPoolResponse) {
    option (google.api.http).get = "/petri/lend/v1beta1/lends_by_owner_pool/{owner}/{pool_id}";
  };

  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/petri/lend/v1beta1/params";
  }

  rpc QueryPairs(QueryPairsRequest) returns (QueryPairsResponse) {
    option (google.api.http).get = "/petri/lend/v1beta1/pairs";
  }
  rpc QueryPair(QueryPairRequest) returns (QueryPairResponse) {
    option (google.api.http).get = "/petri/lend/v1beta1/pairs/{id}";
  }

  rpc QueryAssetRatesParams(QueryAssetRatesParamsRequest) returns (QueryAssetRatesParamsResponse) {
    option (google.api.http).get = "/petri/lend/v1beta1/asset_rates_params";
  }
  rpc QueryAssetRatesParam(QueryAssetRatesParamRequest) returns (QueryAssetRatesParamResponse) {
    option (google.api.http).get = "/petri/lend/v1beta1/asset_rates_param/{id}";
  }

  rpc QueryPools(QueryPoolsRequest) returns (QueryPoolsResponse) {
    option (google.api.http).get = "/petri/lend/v1beta1/pools";
  }
  rpc QueryPool(QueryPoolRequest) returns (QueryPoolResponse) {
    option (google.api.http).get = "/petri/lend/v1beta1/pools/{id}";
  }

  rpc QueryAssetToPairMappings(QueryAssetToPairMappingsRequest) returns (QueryAssetToPairMappingsResponse) {
    option (google.api.http).get = "/petri/lend/v1beta1/asset_to_pair_mappings";
  }
  rpc QueryAssetToPairMapping(QueryAssetToPairMappingRequest) returns (QueryAssetToPairMappingResponse) {
    option (google.api.http).get = "/petri/lend/v1beta1/asset_to_pair_mappings/{asset_id}/{pool_id}";
  }

  rpc QueryBorrows(QueryBorrowsRequest) returns (QueryBorrowsResponse) {
    option (google.api.http).get = "/petri/lend/v1beta1/borrows";
  }
  rpc QueryBorrow(QueryBorrowRequest) returns (QueryBorrowResponse) {
    option (google.api.http).get = "/petri/lend/v1beta1/borrows/{id}";
  }

  rpc QueryAllBorrowByOwner(QueryAllBorrowByOwnerRequest) returns (QueryAllBorrowByOwnerResponse) {
    option (google.api.http).get = "/petri/lend/v1beta1/borrows_by_owner/{owner}";
  }

  rpc QueryAllBorrowByOwnerAndPool(QueryAllBorrowByOwnerAndPoolRequest) returns (QueryAllBorrowByOwnerAndPoolResponse) {
    option (google.api.http).get = "/petri/lend/v1beta1/borrows_by_owner_pool/{owner}/{pool_id}";
  }

  rpc QueryPoolAssetLBMapping(QueryPoolAssetLBMappingRequest) returns (QueryPoolAssetLBMappingResponse) {
    option (google.api.http).get = "/petri/lend/v1beta1/pool_asset_lb_mapping/{asset_id}/{pool_id}";
  };

  // rpc QueryModuleBalance(QueryModuleBalanceRequest) returns (QueryModuleBalanceResponse) {
  //   option (google.api.http).get = "/petri/lend/v1beta1/module_balance/{pool_id}";
  // };

  // rpc QueryDepositStats(QueryDepositStatsRequest) returns (QueryDepositStatsResponse) {
  //   option (google.api.http).get = "/petri/lend/v1beta1/deposit_stats";
  // }

  // rpc QueryUserDepositStats(QueryUserDepositStatsRequest) returns (QueryUserDepositStatsResponse) {
  //   option (google.api.http).get = "/petri/lend/v1beta1/user_deposit_stats";
  // }

  // rpc QueryReserveDepositStats(QueryReserveDepositStatsRequest) returns (QueryReserveDepositStatsResponse) {
  //   option (google.api.http).get = "/petri/lend/v1beta1/reserve_deposit_stats";
  // }

  rpc QueryReserveBuybackAssetData(QueryReserveBuybackAssetDataRequest) returns (QueryReserveBuybackAssetDataResponse) {
    option (google.api.http).get = "/petri/lend/v1beta1/reserve_buyback_asset_data/{asset_id}";
  }

  // rpc QueryBorrowStats(QueryBorrowStatsRequest) returns (QueryBorrowStatsResponse) {
  //   option (google.api.http).get = "/petri/lend/v1beta1/borrow_stats";
  // }

  rpc QueryAuctionParams(QueryAuctionParamRequest) returns (QueryAuctionParamResponse) {
    option (google.api.http).get = "/petri/lend/v1beta1/auctionparams/{app_id}";
  }
  rpc QueryModuleBalance(QueryModuleBalanceRequest) returns (QueryModuleBalanceResponse) {
    option (google.api.http).get = "/petri/lend/v1beta1/module_balance/{pool_id}";
  };
}

